fixed header size on narrow desktop window

--- a/docs/theme/docker/static/css/main.less
+++ b/docs/theme/docker/static/css/main.less
@@ -125,9 +125,11 @@ p a {
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
 }
 
-.brand.logo a {
+.brand-logo a {
 	color: white;
-
+  img {
+    width: auto;
+  }
 }
 
 .logo {
